Mobile: fixati font size degli elementi nell header

--- a/cpp/parts/1.html
+++ b/cpp/parts/1.html
@@ -19,8 +19,8 @@
     <header>
         <div id="logo" onmousedown="toPage('../../index.html')">L</div>
         <p id="logoName">Less</p>
-        <p><i class="fas fa-envelope" style="margin-right: .4rem;"></i>alessiocellucci.dev@gmail.com</p>
-        <a href="https://github.com/less-hub/" target="_blank"><i class="fab fa-github" style="margin-right: .4rem;"></i>less-hub</a>
+        <p class="logoMail"><i class="fas fa-envelope" style="margin-right: .4rem;"></i>alessiocellucci.dev@gmail.com</p>
+        <a class="logoGitHub" href="https://github.com/less-hub/" target="_blank"><i class="fab fa-github" style="margin-right: .4rem;"></i>less-hub</a>
         <nav id="navigator">
             <li><a href="../../index.html">Home</a></li>
             <i class="fas fa-angle-double-down menuArrowDown" style="padding-top: 3%; color: #fbfff1;"></i>
