Mobile: Aggiunto logo come background

--- a/cpp/cpp.html
+++ b/cpp/cpp.html
@@ -28,6 +28,7 @@
             <li><a href="cpp.html" class="active">C++ Reference</a></li>
         </nav>
     </header>
+    <div class="backgroundLogo mobileShow">L</div>
     <div class="mainPage mobileHide">
       <h2 class="mainTitle">C++ Reference</h2>
       <div class="allPartsContainer">
