--- a/cpp/parts/1.html
+++ b/cpp/parts/1.html
@@ -35,6 +35,7 @@
             </li>
         </nav>
     </header>
+    <div class="backgroundLogo mobileShow">L</div>
     <div class="headerMobile mobileShow">
       <h2 class="mainTitle">C++ Parte 1</h2>
       <div class="menuButton" onmousedown="showMobileMenu();"><i class="fas fa-bars" style="color: var(--main-black)"></i></div>
