--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
           <li><a href="index.html" class="active">Home</a></li>
         </nav>
     </header>
+    <div class="backgroundLogo mobileShow">L</div>
     <div class="mainPage mobileHide">
         <h2 class="mainTitle">I miei progetti</h2>
         <div class="allProjectsContainer">
