--- a/exercism/exercism.html
+++ b/exercism/exercism.html
@@ -29,6 +29,7 @@
           <li><a href="cpp.html" class="active">Exercism</a></li>
         </nav>
     </header>
+    <div class="backgroundLogo mobileShow">L</div>
     <div class="mainPage mobileHide">
       <h2 class="mainTitle">I miei esercizi su <a href="https://exercism.io/" target="_blank">exercism.io</a></h2>
       <div class="allLanguagesContainer">
