--- a/exercism/exercism/javascript.html
+++ b/exercism/exercism/javascript.html
@@ -30,6 +30,7 @@
             <li><a href="cpp.html" class="active">JavaScript</a></li>
         </nav>
     </header>
+    <div class="backgroundLogo mobileShow">L</div>
     <div class="headerMobile mobileShow">
       <h2 class="mainTitle">I miei esercizi JavaScript</h2>
       <div class="menuButton" onmousedown="showMobileMenu();"><i class="fas fa-bars" style="color: var(--main-black)"></i></div>
