Miglioramento gestione colori: ora basta cambiare i colori in header

--- a/cpp/cpp.html
+++ b/cpp/cpp.html
@@ -24,7 +24,7 @@
         <a class="logoGitHub" href="https://github.com/less-hub/" target="_blank"><i class="fab fa-github" style="margin-right: .4rem;"></i>less-hub</a>
         <nav id="navigator">
             <li><a href="../index.html">Home</a></li>
-            <i class="fas fa-angle-double-down menuArrowDown" style="padding-top: 3%; color: #fbfff1;"></i>
+            <i class="fas fa-angle-double-down menuArrowDown" style="padding-top: 3%; color: var(--main-white);"></i>
             <li><a href="cpp.html" class="active">C++ Reference</a></li>
         </nav>
     </header>
