--- a/cpp/parts/1.html
+++ b/cpp/parts/1.html
@@ -23,11 +23,11 @@
         <a class="logoGitHub" href="https://github.com/less-hub/" target="_blank"><i class="fab fa-github" style="margin-right: .4rem;"></i>less-hub</a>
         <nav id="navigator">
             <li><a href="../../index.html">Home</a></li>
-            <i class="fas fa-angle-double-down menuArrowDown" style="padding-top: 3%; color: #fbfff1;"></i>
+            <i class="fas fa-angle-double-down menuArrowDown" style="padding-top: 3%; color: var(--main-white);"></i>
             <li><a href="../cpp.html">C++ Reference</a></li>
-            <i class="fas fa-angle-double-down menuArrowDown" style="padding-top: 3%; color: #fbfff1;"></i>
+            <i class="fas fa-angle-double-down menuArrowDown" style="padding-top: 3%; color: var(--main-white);"></i>
             <li><a href="1.html" class="active">Parte 1</a></li>
-            <i class="fas fa-angle-double-down menuArrowDown" id="toRemoveMobile" style="padding-top: 3%; color: #fbfff1;"></i>
+            <i class="fas fa-angle-double-down menuArrowDown" id="toRemoveMobile" style="padding-top: 3%; color: var(--main-white);"></i>
             <li class="navigatorIndexContainer mobileHide">
               <ul class="navigatorIndex">
                 <li><a href="#intro">Introduzione</a></li>
