Aggiunto chapter layout per C++ reference e aggiustamenti HTML nelle parti

--- a/cpp/parts/1.html
+++ b/cpp/parts/1.html
@@ -42,151 +42,49 @@
     </div>
     <div class="mainPage">
       <h2 id="intro" class="mainTitle mobileHide">C++ Parte 1</h2>
-      <div id="scrollableMobile">
-      <p>
-        Questa parte parla di tut cos bell Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-        sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </p>
+        <div id="scrollableMobile">
+          <p>
+            Questa parte parla di tut cos bell Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+            sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </p>
 
-      <!-- Chapter -->
-      <div id="ipsum" class="chapter">
-        <h3>lorem ipsum sit amet</h3>
-        <p>
-          Questa parte parla di tut cos bell Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-          labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-          sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-        <div class="codeContainer">
-          <div class="codeAndLabel">
-            <p class="codeLabel">Listato 1.0</p>
-            <pre><code>
-              int x = 2;
-              x * x = 7;
-              x = func(2, "sksk");
+          <!-- Chapter -->
+          <div id="ipsum" class="chapter">
+            <h3>lorem ipsum sit amet</h3>
+            <p>
+              Questa parte parla di tut cos bell Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+              labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+              sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+            <div class="codeContainer">
+              <div class="codeAndLabel">
+                <p class="codeLabel" id="list10">Listato 1.0</p>
+                <pre><code>
+                  int x = 2;
+                  x * x = 7;
+                  x = func(2, "sksk");
 
-              <strong>if(x == 7)</strong>
-                return true;
-            </code></pre>
+                  <strong>if(x == 7)</strong>
+                    return true;
+                </code></pre>
+              </div>
+              <div class="codeCommentsContainer">
+                <p class="codeCommentHead">Commenti:</p>
+                <ul class="codeComment">
+                  <li>
+                    Questa parte parla di tut cos bell Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                    labore et dolore magna aliqua. Ut enim ad minim veniam,
+                  </li>
+                </ul>
+              </div>
+            </div>
           </div>
-          <div class="codeCommentsContainer">
-            <p class="codeCommentHead">Commenti:</p>
-            <ul class="codeComment">
-              <li>
-                Questa parte parla di tut cos bell Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                labore et dolore magna aliqua. Ut enim ad minim veniam,
-              </li>
-            </ul>
-          </div>
-        </div>
+          <!-- End of chapter -->
+
       </div>
-      <!-- End of chapter -->
-
-      <!-- Chapter -->
-      <div id="ipsum" class="chapter">
-        <h3>lorem ipsum sit amet</h3>
-        <p>
-          Questa parte parla di tut cos bell Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-          labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-          sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-        <div class="codeContainer">
-          <div class="codeAndLabel">
-            <p class="codeLabel">Listato 1.0</p>
-            <pre><code>
-              int x = 2;
-              x * x = 7;
-              x = func(2, "sksk");
-
-              <strong>if(x == 7)</strong>
-                return true;
-            </code></pre>
-          </div>
-          <div class="codeCommentsContainer">
-            <p class="codeCommentHead">Commenti:</p>
-            <ul class="codeComment">
-              <li>
-                Questa parte parla di tut cos bell Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                labore et dolore magna aliqua. Ut enim ad minim veniam,
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <!-- End of chapter -->
-
-      <!-- Chapter -->
-      <div id="ipsum" class="chapter">
-        <h3>lorem ipsum sit amet</h3>
-        <p>
-          Questa parte parla di tut cos bell Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-          labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-          sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-        <div class="codeContainer">
-          <div class="codeAndLabel">
-            <p class="codeLabel">Listato 1.0</p>
-            <pre><code>
-              int x = 2;
-              x * x = 7;
-              x = func(2, "sksk");
-
-              <strong>if(x == 7)</strong>
-                return true;
-            </code></pre>
-          </div>
-          <div class="codeCommentsContainer">
-            <p class="codeCommentHead">Commenti:</p>
-            <ul class="codeComment">
-              <li>
-                Questa parte parla di tut cos bell Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                labore et dolore magna aliqua. Ut enim ad minim veniam,
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <!-- End of chapter -->
-
-      <!-- Chapter -->
-      <div id="ipsum" class="chapter">
-        <h3>lorem ipsum sit amet</h3>
-        <p>
-          Questa parte parla di tut cos bell Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-          labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-          sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-        <div class="codeContainer">
-          <div class="codeAndLabel">
-            <p class="codeLabel">Listato 1.0</p>
-            <pre><code>
-              int x = 2;
-              x * x = 7;
-              x = func(2, "sksk");
-
-              <strong>if(x == 7)</strong>
-                return true;
-            </code></pre>
-          </div>
-          <div class="codeCommentsContainer">
-            <p class="codeCommentHead">Commenti:</p>
-            <ul class="codeComment">
-              <li>
-                Questa parte parla di tut cos bell Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                labore et dolore magna aliqua. Ut enim ad minim veniam,
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <!-- End of chapter -->
-
-    </div>
     </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="../../public/js/index.js"></script>
