Aggiunto CSS per liste e incominciato il primo capitolo

--- a/cpp/parts/1.html
+++ b/cpp/parts/1.html
@@ -31,6 +31,7 @@
             <li class="navigatorIndexContainer mobileHide">
               <ul class="navigatorIndex">
                 <li><a href="#intro">Introduzione</a></li>
+                <li><a href="#tipiEDichiarazioni">Tipi e dichiarazioni</a></li>
               </ul>
             </li>
         </nav>
@@ -44,44 +45,40 @@
       <h2 id="intro" class="mainTitle mobileHide">C++ Parte 1</h2>
         <div id="scrollableMobile">
           <p>
-            Questa parte parla di tut cos bell Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-            sunt in culpa qui officia deserunt mollit anim id est laborum.
+            In questa parte sono descritti i tpi incorporati del C++ e i costrutti di base per costruire programmi con essi. Il sottoinsieme C del C++ è presentato insieme al supporto addizionale
+            del linguaggio agli stili tradizionali di programmazione. Saranno anche trattati i costrutti di base per costruire un programma C++ a partire da parti fisiche e logiche.
           </p>
 
           <!-- Chapter -->
-          <div id="ipsum" class="chapter">
-            <h3>lorem ipsum sit amet</h3>
-            <p>
-              Questa parte parla di tut cos bell Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-              labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-              sunt in culpa qui officia deserunt mollit anim id est laborum.
-            </p>
-            <div class="codeContainer">
-              <div class="codeAndLabel">
-                <p class="codeLabel" id="list10">Listato 1.0</p>
-                <pre><code>
-                  int x = 2;
-                  x * x = 7;
-                  x = func(2, "sksk");
+          <div id="tipiEDichiarazioni" class="chapter">
+            <h3>Tipi e dichiarazioni</h3>
 
-                  <strong>if(x == 7)</strong>
-                    return true;
-                </code></pre>
-              </div>
-              <div class="codeCommentsContainer">
-                <p class="codeCommentHead">Commenti:</p>
-                <ul class="codeComment">
-                  <li>
-                    Questa parte parla di tut cos bell Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                    labore et dolore magna aliqua. Ut enim ad minim veniam,
-                  </li>
-                </ul>
-              </div>
-            </div>
+            <h4>Tipi fondamentali</h4>
+            <p>
+              Il C++ ha un set di tipi fondamentali corrispondenti alle più comuni unità di base di memorizzazione di un computer, e ha i modi più comuni per usarli come dati.
+            </p>
+            <ul class="list">
+              <li><a  href="#bool">Un tipo booleano <strong>bool</strong>, per i valori logici</a></li>
+              <li><a  href="#char">Tipi carattere <strong>char, wchar_t</strong>, per i caratteri</a></li>
+              <li><a  href="#int">Tipi interi <strong>int, long long</strong>, per i valori interi</a></li>
+              <li><a  href="#float">Tipi a virgola mobile <strong>double, long double</strong>, per i valori con virgola</a></li>
+              <li><a  href="#void">Un tipo per assenza di informazioni <strong>void</strong></a></li>
+            </ul>
           </div>
+
+          <p>
+            I tipi booleani, char e int sono detti <em>tipi integrali</em>.</br>
+            I tipi integrali e a virgolia mobile sono detti <em>tipi artimetici</em>.<br>
+            Enumerazioni e classi sono detti <em>tipi definiti dall'utente</em> in quanto derivano dai tipi aritmetici.<br>
+            I puntatori e riferimenti sono detti <em>tipi incorporati</em>.<br>
+            I tipi aritmetici sono forniti di svariate dimensioni al fine di offrire al programmatore la possibilità di scegliere la quantità di spazio di memorizzazione consumato e la precisione
+            e l'intervallo per i calcoli.
+          </p>
+
+          <h4 id="bool">Booleani</h4>
+          <p>
+            
+          </p>
           <!-- End of chapter -->
 
       </div>
