Aggiunto colore per liste clickabili C++ reference

--- a/cpp/parts/1.html
+++ b/cpp/parts/1.html
@@ -57,7 +57,7 @@
             <p>
               Il C++ ha un set di tipi fondamentali corrispondenti alle più comuni unità di base di memorizzazione di un computer, e ha i modi più comuni per usarli come dati.
             </p>
-            <ul class="list">
+            <ul class="list clickableList">
               <li><a  href="#bool">Un tipo booleano <strong>bool</strong>, per i valori logici</a></li>
               <li><a  href="#char">Tipi carattere <strong>char, wchar_t</strong>, per i caratteri</a></li>
               <li><a  href="#int">Tipi interi <strong>int, long long</strong>, per i valori interi</a></li>
@@ -115,7 +115,7 @@
 
           <h4 id="char">Tipi di carattere</h4>
           <p>
-            
+
           </p>
           <!-- End of chapter -->
 
